--- a/index.html
+++ b/index.html
@@ -128,11 +128,8 @@
             Dengan segala cinta dari tuan putri satu ini,<br>
             Tasyafira Amanda a.k.a Lebah (Bee)
         </div>
-        <!-- Menambahkan musik latar -->
-        <audio autoplay loop>
-            <!-- Ganti 'birthday.mp3' dengan nama file musik Anda -->
-            <source src="musik.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
+        <audio loop autoplay>
+        <source src="musik.mp3" type="audio/mp3">
         </audio>
     </div>
 </body>
